{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 19,
  "lineage": "f3878a3f-ee71-8b5f-159d-304d0c3fb5d1",
  "resources": [
    {
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "result-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "default/result-ingress",
            "metadata": [
              {
                "annotations": null,
                "generate_name": "",
                "generation": 1,
                "labels": null,
                "name": "result-ingress",
                "namespace": "default",
                "resource_version": "50358",
                "uid": "e8e177ab-fd1a-496f-862a-6cb7339331d0"
              }
            ],
            "spec": [
              {
                "default_backend": [
                  {
                    "resource": [],
                    "service": [
                      {
                        "name": "result",
                        "port": [
                          {
                            "name": "",
                            "number": 5001
                          }
                        ]
                      }
                    ]
                  }
                ],
                "ingress_class_name": "",
                "rule": [],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": []
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.google_client_config.default",
            "data.google_container_cluster.my_cluster",
            "data.terraform_remote_state.gke"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "vote-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "default/vote-ingress",
            "metadata": [
              {
                "annotations": null,
                "generate_name": "",
                "generation": 1,
                "labels": null,
                "name": "vote-ingress",
                "namespace": "default",
                "resource_version": "50356",
                "uid": "376d8d9b-c931-4ace-9654-cb29a982f55d"
              }
            ],
            "spec": [
              {
                "default_backend": [
                  {
                    "resource": [],
                    "service": [
                      {
                        "name": "vote",
                        "port": [
                          {
                            "name": "",
                            "number": 5000
                          }
                        ]
                      }
                    ]
                  }
                ],
                "ingress_class_name": "",
                "rule": [],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": []
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.google_client_config.default",
            "data.google_container_cluster.my_cluster",
            "data.terraform_remote_state.gke"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service_v1",
      "name": "db-service",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "default/db",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "db"
                },
                "name": "db",
                "namespace": "default",
                "resource_version": "46041",
                "uid": "9c5f1453-cc29-4e0f-856f-bcd70c186b32"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.160.4.210",
                "cluster_ips": [
                  "10.160.4.210"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "db-service",
                    "node_port": 0,
                    "port": 5432,
                    "protocol": "TCP",
                    "target_port": "5432"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "db"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "data.google_client_config.default",
            "data.google_container_cluster.my_cluster",
            "data.terraform_remote_state.gke"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service_v1",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "default/redis",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "redis"
                },
                "name": "redis",
                "namespace": "default",
                "resource_version": "46043",
                "uid": "6bf3b2a6-c3ee-4203-9bad-db2b929c0c39"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.160.14.204",
                "cluster_ips": [
                  "10.160.14.204"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "redis-service",
                    "node_port": 0,
                    "port": 6379,
                    "protocol": "TCP",
                    "target_port": "6379"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "redis"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "data.google_client_config.default",
            "data.google_container_cluster.my_cluster",
            "data.terraform_remote_state.gke"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service_v1",
      "name": "result",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "default/result",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "result"
                },
                "name": "result",
                "namespace": "default",
                "resource_version": "46042",
                "uid": "6549c153-2c14-4b00-90a1-d8aeb7027454"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.160.1.129",
                "cluster_ips": [
                  "10.160.1.129"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "result-service",
                    "node_port": 31001,
                    "port": 5001,
                    "protocol": "TCP",
                    "target_port": "80"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "result"
                },
                "session_affinity": "None",
                "type": "NodePort"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "data.google_client_config.default",
            "data.google_container_cluster.my_cluster",
            "data.terraform_remote_state.gke"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service_v1",
      "name": "vote",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "default/vote",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "vote"
                },
                "name": "vote",
                "namespace": "default",
                "resource_version": "46040",
                "uid": "68e4b169-2065-4903-948b-d0e889283c67"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.160.14.122",
                "cluster_ips": [
                  "10.160.14.122"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "vote-service",
                    "node_port": 31000,
                    "port": 5000,
                    "protocol": "TCP",
                    "target_port": "80"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "vote"
                },
                "session_affinity": "None",
                "type": "NodePort"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "data.google_client_config.default",
            "data.google_container_cluster.my_cluster",
            "data.terraform_remote_state.gke"
          ]
        }
      ]
    }
  ]
}